GC/log/build_2021-11-04_17-32-27/controller/stderr.log
  File "/home/robofei/Downloads/GC/install/controller/lib/python3.8/site-packages/controller/receiver.py", line 18
    self.get_logger().info('We are playing as player  %d' % player 'in team %d ' % team)
                                                                   ^
SyntaxError: invalid syntax

